hphp/hack/test/typecheck/modules/multiple_module_declarations.php
<?hh
new module foo {}
new module bar {}
